@@ -3,6 +3,7 @@ package org.opentripplanner.routing.edgetype;
 import java.io.IOException;
 import java.io.ObjectOutputStream;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Optional;
@@ -13,14 +14,13 @@ import org.locationtech.jts.geom.LineString;
 import org.locationtech.jts.geom.impl.PackedCoordinateSequence;
 import org.opentripplanner.common.TurnRestriction;
 import org.opentripplanner.common.TurnRestrictionType;
-import org.opentripplanner.common.geometry.CompactLineString;
 import org.opentripplanner.common.geometry.DirectionUtils;
-import org.opentripplanner.common.geometry.GeometryUtils;
 import org.opentripplanner.common.geometry.SphericalDistanceLibrary;
 import org.opentripplanner.common.model.P2;
 import org.opentripplanner.graph_builder.linking.DisposableEdgeCollection;
 import org.opentripplanner.graph_builder.linking.LinkingDirection;
-import org.opentripplanner.routing.api.request.RoutingRequest;
+import org.opentripplanner.routing.api.request.RouteRequest;
+import org.opentripplanner.routing.api.request.preference.RoutingPreferences;
 import org.opentripplanner.routing.core.State;
 import org.opentripplanner.routing.core.StateEditor;
 import org.opentripplanner.routing.core.TraverseMode;
@@ -34,6 +34,8 @@ import org.opentripplanner.routing.vertextype.StreetVertex;
 import org.opentripplanner.transit.model.basic.I18NString;
 import org.opentripplanner.transit.model.basic.NonLocalizedString;
 import org.opentripplanner.util.BitSetUtils;
+import org.opentripplanner.util.geometry.CompactLineStringUtils;
+import org.opentripplanner.util.geometry.GeometryUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -47,7 +49,6 @@ public class StreetEdge
   implements BikeWalkableEdge, Cloneable, CarPickupableEdge, WheelchairTraversalInformation {
 
   private static final Logger LOG = LoggerFactory.getLogger(StreetEdge.class);
-  private static final long serialVersionUID = 1L;
   /* TODO combine these with OSM highway= flags? */
   public static final int CLASS_STREET = 3;
   public static final int CLASS_CROSSING = 4;
@@ -82,10 +83,17 @@ public class StreetEdge
 
   /**
    * bicycleSafetyWeight = length * bicycleSafetyFactor. For example, a 100m street with a safety
-   * factor of 2.0 will be considered in term of safety cost as the same as a 150m street with a
+   * factor of 2.0 will be considered in term of safety cost as the same as a 200m street with a
    * safety factor of 1.0.
    */
   protected float bicycleSafetyFactor;
+
+  /**
+   * walkSafetyFactor = length * walkSafetyFactor. For example, a 100m street with a safety
+   * factor of 2.0 will be considered in term of safety cost as the same as a 200m street with a
+   * safety factor of 1.0.
+   */
+  protected float walkSafetyFactor;
 
   private byte[] compactGeometry;
 
@@ -123,8 +131,11 @@ public class StreetEdge
    * <p>
    * Why not use a concurrent collection? That would mean that every StreetEdge has its own empty
    * instance which would increase memory significantly.
+   * <p>
+   * We use specifically an EmptyList here, in order to get very fast iteration, since it has a
+   * static iterator instance, which always returns false in hasNext
    */
-  private List<TurnRestriction> turnRestrictions = List.of();
+  private List<TurnRestriction> turnRestrictions = Collections.emptyList();
 
   public StreetEdge(
     StreetVertex v1,
@@ -148,6 +159,7 @@ public class StreetEdge
       );
     }
     this.bicycleSafetyFactor = 1.0f;
+    this.walkSafetyFactor = 1.0f;
     this.name = name;
     this.setPermission(permission);
     this.setCarSpeed(DEFAULT_CAR_SPEED);
@@ -283,7 +295,7 @@ public class StreetEdge
    * Calculate the speed appropriately given the RoutingRequest and traverseMode.
    */
   public double calculateSpeed(
-    RoutingRequest options,
+    RoutingPreferences preferences,
     TraverseMode traverseMode,
     boolean walkingBike
   ) {
@@ -293,8 +305,16 @@ public class StreetEdge
       // NOTE: Automobiles have variable speeds depending on the edge type
       return calculateCarSpeed();
     }
-    final double speed = options.getSpeed(traverseMode, walkingBike);
-    return isStairs() ? (speed / options.stairsTimeFactor) : speed;
+
+    final double speed =
+      switch (traverseMode) {
+        case WALK -> walkingBike ? preferences.bike().walkingSpeed() : preferences.walk().speed();
+        case BICYCLE -> preferences.bike().speed();
+        case CAR -> preferences.car().speed();
+        default -> throw new IllegalArgumentException("getSpeed(): Invalid mode " + traverseMode);
+      };
+
+    return isStairs() ? (speed / preferences.walk().stairsTimeFactor()) : speed;
   }
 
   /**
@@ -339,6 +359,28 @@ public class StreetEdge
       : bicycleSafetyFactor * getDistanceMeters();
   }
 
+  public float getWalkSafetyFactor() {
+    return walkSafetyFactor;
+  }
+
+  public void setWalkSafetyFactor(float walkSafetyFactor) {
+    if (hasElevationExtension()) {
+      throw new IllegalStateException(
+        "A walk safety factor may not be set if an elevation extension is set."
+      );
+    }
+    if (!Float.isFinite(walkSafetyFactor) || walkSafetyFactor <= 0) {
+      throw new IllegalArgumentException("Invalid walkSafetyFactor: " + walkSafetyFactor);
+    }
+    this.walkSafetyFactor = walkSafetyFactor;
+  }
+
+  public double getEffectiveWalkSafetyDistance() {
+    return elevationExtension != null
+      ? elevationExtension.getEffectiveWalkSafetyDistance()
+      : walkSafetyFactor * getDistanceMeters();
+  }
+
   public String toString() {
     return (
       "StreetEdge(" +
@@ -363,28 +405,28 @@ public class StreetEdge
 
   @Override
   public State traverse(State s0) {
-    final RoutingRequest options = s0.getOptions();
+    final RouteRequest request = s0.getOptions();
     final StateEditor editor;
 
     // If we are biking, or walking with a bike check if we may continue by biking or by walking
     if (s0.getNonTransitMode() == TraverseMode.BICYCLE) {
       if (canTraverse(TraverseMode.BICYCLE)) {
-        editor = doTraverse(s0, options, TraverseMode.BICYCLE, false);
+        editor = doTraverse(s0, request, TraverseMode.BICYCLE, false);
       } else if (canTraverse(TraverseMode.WALK)) {
-        editor = doTraverse(s0, options, TraverseMode.WALK, true);
+        editor = doTraverse(s0, request, TraverseMode.WALK, true);
       } else {
         return null;
       }
     } else if (canTraverse(s0.getNonTransitMode())) {
-      editor = doTraverse(s0, options, s0.getNonTransitMode(), false);
+      editor = doTraverse(s0, request, s0.getNonTransitMode(), false);
     } else {
       editor = null;
     }
 
     State state = editor != null ? editor.makeState() : null;
 
-    if (canPickupAndDrive(s0)) {
-      StateEditor inCar = doTraverse(s0, options, TraverseMode.CAR, false);
+    if (canPickupAndDrive(s0) && canTraverse(TraverseMode.CAR)) {
+      StateEditor inCar = doTraverse(s0, request, TraverseMode.CAR, false);
       if (inCar != null) {
         driveAfterPickup(s0, inCar);
         State forkState = inCar.makeState();
@@ -396,8 +438,12 @@ public class StreetEdge
       }
     }
 
-    if (canDropOffAfterDriving(s0) && !getPermission().allows(TraverseMode.CAR)) {
-      StateEditor dropOff = doTraverse(s0, options, TraverseMode.WALK, false);
+    if (
+      canDropOffAfterDriving(s0) &&
+      !getPermission().allows(TraverseMode.CAR) &&
+      canTraverse(TraverseMode.WALK)
+    ) {
+      StateEditor dropOff = doTraverse(s0, request, TraverseMode.WALK, false);
       if (dropOff != null) {
         dropOffAfterDriving(s0, dropOff);
         // Only the walk state is returned, since traversing by car was not possible
@@ -426,7 +472,7 @@ public class StreetEdge
   }
 
   public LineString getGeometry() {
-    return CompactLineString.uncompactLineString(
+    return CompactLineStringUtils.uncompactLineString(
       fromv.getLon(),
       fromv.getLat(),
       tov.getLon(),
@@ -450,12 +496,12 @@ public class StreetEdge
 
   private void setGeometry(LineString geometry) {
     this.compactGeometry =
-      CompactLineString.compactLineString(
+      CompactLineStringUtils.compactLineString(
         fromv.getLon(),
         fromv.getLat(),
         tov.getLon(),
         tov.getLat(),
-        isBack() ? (LineString) geometry.reverse() : geometry,
+        isBack() ? geometry.reverse() : geometry,
         isBack()
       );
   }
@@ -806,7 +852,7 @@ public class StreetEdge
     synchronized (this) {
       if (turnRestrictions.contains(turnRestriction)) {
         if (turnRestrictions.size() == 1) {
-          turnRestrictions = List.of();
+          turnRestrictions = Collections.emptyList();
         } else {
           // in order to guarantee fast access without extra allocations
           // we make the turn restrictions unmodifiable after a copy-on-write modification
@@ -823,7 +869,7 @@ public class StreetEdge
       return;
     }
     synchronized (this) {
-      turnRestrictions = List.of();
+      turnRestrictions = Collections.emptyList();
     }
   }
 
@@ -847,6 +893,7 @@ public class StreetEdge
   ) {
     splitEdge.flags = this.flags;
     splitEdge.setBicycleSafetyFactor(bicycleSafetyFactor);
+    splitEdge.setWalkSafetyFactor(walkSafetyFactor);
     splitEdge.setStreetClass(getStreetClass());
     splitEdge.setCarSpeed(getCarSpeed());
     splitEdge.setElevationExtensionUsingParent(this, fromDistance, toDistance);
@@ -927,13 +974,10 @@ public class StreetEdge
    */
   private StateEditor doTraverse(
     State s0,
-    RoutingRequest options,
+    RouteRequest options,
     TraverseMode traverseMode,
     boolean walkingBike
   ) {
-    if (traverseMode == null) {
-      return null;
-    }
     boolean backWalkingBike = s0.isBackWalkingBike();
     TraverseMode backMode = s0.getBackMode();
     Edge backEdge = s0.getBackEdge();
@@ -949,19 +993,14 @@ public class StreetEdge
       }
     }
 
-    /* Check whether this street allows the current mode. */
-    if (!canTraverse(traverseMode)) {
-      return null;
-    }
-
     // Automobiles have variable speeds depending on the edge type
-    double speed = calculateSpeed(options, traverseMode, walkingBike);
+    double speed = calculateSpeed(options.preferences(), traverseMode, walkingBike);
 
     var traversalCosts =
       switch (traverseMode) {
-        case BICYCLE, SCOOTER -> bicycleTraversalCost(options, speed);
+        case BICYCLE, SCOOTER -> bicycleTraversalCost(options.preferences(), speed);
         case WALK -> walkingTraversalCosts(options, traverseMode, speed, walkingBike);
-        default -> otherTraversalCosts(options, traverseMode, walkingBike, speed);
+        default -> otherTraversalCosts(options.preferences(), traverseMode, walkingBike, speed);
       };
 
     var time = traversalCosts.time();
@@ -979,14 +1018,15 @@ public class StreetEdge
     StreetEdge backPSE;
     if (backEdge instanceof StreetEdge) {
       backPSE = (StreetEdge) backEdge;
-      RoutingRequest backOptions = s0.getOptions();
-      double backSpeed = backPSE.calculateSpeed(backOptions, backMode, backWalkingBike);
-      final double realTurnCost; // Units are seconds.
+      RouteRequest backOptions = s0.getOptions();
+      RoutingPreferences backPreferences = s0.getPreferences();
+      double backSpeed = backPSE.calculateSpeed(backPreferences, backMode, backWalkingBike);
+      final double turnDuration; // Units are seconds.
 
       // Apply turn restrictions
-      if (options.arriveBy && !canTurnOnto(backPSE, s0, backMode)) {
+      if (options.arriveBy() && !canTurnOnto(backPSE, s0, backMode)) {
         return null;
-      } else if (!options.arriveBy && !backPSE.canTurnOnto(this, s0, traverseMode)) {
+      } else if (!options.arriveBy() && !backPSE.canTurnOnto(this, s0, traverseMode)) {
         return null;
       }
 
@@ -1001,47 +1041,42 @@ public class StreetEdge
        * that during reverse traversal, we must also use the speed for the mode of
        * the backEdge, rather than of the current edge.
        */
-      if (options.arriveBy && tov instanceof IntersectionVertex traversedVertex) { // arrive-by search
-        realTurnCost =
+      if (options.arriveBy() && tov instanceof IntersectionVertex traversedVertex) { // arrive-by search
+        turnDuration =
           s0
-            .getRoutingContext()
-            .graph.getIntersectionTraversalModel()
-            .computeTraversalCost(
+            .intersectionTraversalCalculator()
+            .computeTraversalDuration(
               traversedVertex,
               this,
               backPSE,
               backMode,
-              backOptions,
               (float) speed,
               (float) backSpeed
             );
-      } else if (!options.arriveBy && fromv instanceof IntersectionVertex traversedVertex) { // depart-after search
-        realTurnCost =
+      } else if (!options.arriveBy() && fromv instanceof IntersectionVertex traversedVertex) { // depart-after search
+        turnDuration =
           s0
-            .getRoutingContext()
-            .graph.getIntersectionTraversalModel()
-            .computeTraversalCost(
+            .intersectionTraversalCalculator()
+            .computeTraversalDuration(
               traversedVertex,
               backPSE,
               this,
               traverseMode,
-              options,
               (float) backSpeed,
               (float) speed
             );
       } else {
         // In case this is a temporary edge not connected to an IntersectionVertex
-        LOG.debug("Not computing turn cost for edge {}", this);
-        realTurnCost = 0;
+        LOG.debug("Not computing turn duration for edge {}", this);
+        turnDuration = 0;
       }
 
       if (!traverseMode.isDriving()) {
-        s1.incrementWalkDistance(realTurnCost / 100); // just a tie-breaker
+        s1.incrementWalkDistance(turnDuration / 100); // just a tie-breaker
       }
 
-      int turnTime = (int) Math.ceil(realTurnCost);
-      roundedTime += turnTime;
-      weight += options.turnReluctance * realTurnCost;
+      roundedTime += (int) Math.ceil(turnDuration);
+      weight += options.preferences().street().turnReluctance() * turnDuration;
     }
 
     if (!traverseMode.isDriving()) {
@@ -1061,7 +1096,7 @@ public class StreetEdge
 
   @Nonnull
   private TraversalCosts otherTraversalCosts(
-    RoutingRequest options,
+    RoutingPreferences preferences,
     TraverseMode traverseMode,
     boolean walkingBike,
     double speed
@@ -1070,7 +1105,7 @@ public class StreetEdge
     var weight =
       time *
       StreetEdgeReluctanceCalculator.computeReluctance(
-        options,
+        preferences,
         traverseMode,
         walkingBike,
         isStairs()
@@ -1079,10 +1114,10 @@ public class StreetEdge
   }
 
   @Nonnull
-  private TraversalCosts bicycleTraversalCost(RoutingRequest req, double speed) {
+  private TraversalCosts bicycleTraversalCost(RoutingPreferences pref, double speed) {
     double time = getEffectiveBikeDistance() / speed;
     double weight;
-    switch (req.bicycleOptimizeType) {
+    switch (pref.bike().optimizeType()) {
       case GREENWAYS -> {
         weight = bicycleSafetyFactor * getDistanceMeters() / speed;
         if (bicycleSafetyFactor <= GREENWAY_SAFETY_FACTOR) {
@@ -1100,17 +1135,17 @@ public class StreetEdge
         double slope = getEffectiveBikeDistanceForWorkCost();
         weight =
           quick *
-          req.bikeTriangleTimeFactor +
+          pref.bike().optimizeTriangle().time() +
           slope *
-          req.bikeTriangleSlopeFactor +
+          pref.bike().optimizeTriangle().slope() +
           safety *
-          req.bikeTriangleSafetyFactor;
+          pref.bike().optimizeTriangle().safety();
         weight /= speed;
       }
       default -> weight = getDistanceMeters() / speed;
     }
     var reluctance = StreetEdgeReluctanceCalculator.computeReluctance(
-      req,
+      pref,
       TraverseMode.BICYCLE,
       false,
       isStairs()
@@ -1121,26 +1156,25 @@ public class StreetEdge
 
   @Nonnull
   private TraversalCosts walkingTraversalCosts(
-    RoutingRequest routingRequest,
+    RouteRequest request,
     TraverseMode traverseMode,
     double speed,
     boolean walkingBike
   ) {
     Supplier<Double> nonWheelchairReluctance = () ->
       StreetEdgeReluctanceCalculator.computeReluctance(
-        routingRequest,
+        request.preferences(),
         traverseMode,
         walkingBike,
         isStairs()
       );
-
     double time, weight;
-    if (routingRequest.wheelchairAccessibility.enabled()) {
+    if (request.wheelchair()) {
       time = getEffectiveWalkDistance() / speed;
       weight =
         (getEffectiveBikeDistance() / speed) *
         StreetEdgeReluctanceCalculator.computeWheelchairReluctance(
-          routingRequest,
+          request.preferences(),
           getMaxSlope(),
           isWheelchairAccessible(),
           isStairs()
@@ -1151,7 +1185,13 @@ public class StreetEdge
       weight *= nonWheelchairReluctance.get();
     } else {
       // take slopes into account when walking
-      time = weight = (getEffectiveWalkDistance() / speed);
+      time = getEffectiveWalkDistance() / speed;
+      weight =
+        getEffectiveWalkSafetyDistance() *
+        request.preferences().walk().safetyFactor() +
+        getEffectiveWalkDistance() *
+        (1 - request.preferences().walk().safetyFactor());
+      weight /= speed;
       weight *= nonWheelchairReluctance.get();
     }
     return new TraversalCosts(time, weight);
