@@ -4,6 +4,7 @@ import static org.junit.jupiter.api.Assertions.assertAll;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.junit.jupiter.api.Assertions.fail;
+import static org.opentripplanner.graph_builder.DataImportIssueStore.noopIssueStore;
 
 import java.time.Duration;
 import java.util.Arrays;
@@ -12,17 +13,13 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Objects;
 import java.util.Set;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.function.Executable;
 import org.opentripplanner.TestOtpModel;
 import org.opentripplanner.model.PathTransfer;
-import org.opentripplanner.model.StopPattern;
-import org.opentripplanner.model.TripPattern;
 import org.opentripplanner.routing.algorithm.GraphRoutingTest;
-import org.opentripplanner.routing.api.request.RequestModes;
-import org.opentripplanner.routing.api.request.RoutingRequest;
+import org.opentripplanner.routing.api.request.RouteRequest;
 import org.opentripplanner.routing.api.request.StreetMode;
 import org.opentripplanner.routing.edgetype.StreetTraversalPermission;
 import org.opentripplanner.routing.graph.Edge;
@@ -30,49 +27,69 @@ import org.opentripplanner.routing.vertextype.StreetVertex;
 import org.opentripplanner.routing.vertextype.TransitStopVertex;
 import org.opentripplanner.transit.model._data.TransitModelForTest;
 import org.opentripplanner.transit.model.basic.TransitMode;
+import org.opentripplanner.transit.model.network.StopPattern;
+import org.opentripplanner.transit.model.network.TripPattern;
 import org.opentripplanner.transit.model.site.StopLocation;
 import org.opentripplanner.util.lang.ToStringBuilder;
 
 /**
- * This creates a graph with trip patterns S0 - V0 | S11 - V11 --------> V21 - S21 |     \ S12 - V12
- * ----> V22 - V22
+ * This creates a graph with trip patterns
+ <pre>
+  S0 -  V0 ------------
+        |     \       |
+ S11 - V11 --------> V21 - S21
+        |      \      |
+ S12 - V12 --------> V22 - V22
+        |             |
+ S13 - V13 --------> V23 - V23
+ </pre>
  */
 class DirectTransferGeneratorTest extends GraphRoutingTest {
 
   private static final Duration MAX_TRANSFER_DURATION = Duration.ofSeconds(3600);
-  private TransitStopVertex S0, S11, S12, S21, S22;
-  private StreetVertex V0, V11, V12, V21, V22;
+  private TransitStopVertex S0, S11, S12, S13, S21, S22, S23;
+  private StreetVertex V0, V11, V12, V13, V21, V22, V23;
 
   @Test
   public void testDirectTransfersWithoutPatterns() {
-    var generator = new DirectTransferGenerator(
-      MAX_TRANSFER_DURATION,
-      List.of(new RoutingRequest(RequestModes.of().withTransferMode(StreetMode.WALK).build()))
-    );
-
-    var otpModel = graph(false);
+    var otpModel = model(false);
     var graph = otpModel.graph();
     var transitModel = otpModel.transitModel();
+    var req = new RouteRequest();
+    req.journey().transfer().setMode(StreetMode.WALK);
+    var transferRequests = List.of(req);
     graph.hasStreets = false;
 
-    generator.buildGraph(graph, transitModel, null);
+    new DirectTransferGenerator(
+      graph,
+      transitModel,
+      noopIssueStore(),
+      MAX_TRANSFER_DURATION,
+      transferRequests
+    )
+      .buildGraph();
 
     assertTransfers(transitModel.getAllPathTransfers());
   }
 
   @Test
   public void testDirectTransfersWithPatterns() {
-    var generator = new DirectTransferGenerator(
-      MAX_TRANSFER_DURATION,
-      List.of(new RoutingRequest(RequestModes.of().withTransferMode(StreetMode.WALK).build()))
-    );
-
-    var otpModel = graph(true);
+    var otpModel = model(true);
     var graph = otpModel.graph();
     graph.hasStreets = false;
     var transitModel = otpModel.transitModel();
+    var req = new RouteRequest();
+    req.journey().transfer().setMode(StreetMode.WALK);
+    var transferRequests = List.of(req);
 
-    generator.buildGraph(graph, transitModel, null);
+    new DirectTransferGenerator(
+      graph,
+      transitModel,
+      noopIssueStore(),
+      MAX_TRANSFER_DURATION,
+      transferRequests
+    )
+      .buildGraph();
 
     assertTransfers(
       transitModel.getAllPathTransfers(),
@@ -80,41 +97,90 @@ class DirectTransferGeneratorTest extends GraphRoutingTest {
       tr(S0, 935, S21),
       tr(S11, 751, S21),
       tr(S12, 751, S22),
+      tr(S13, 2224, S12),
+      tr(S13, 2347, S22),
       tr(S21, 751, S11),
-      tr(S22, 751, S12)
+      tr(S22, 751, S12),
+      tr(S23, 2347, S12),
+      tr(S23, 2224, S22)
+    );
+  }
+
+  @Test
+  public void testDirectTransfersWithRestrictedPatterns() {
+    var otpModel = model(true, true);
+    var graph = otpModel.graph();
+    graph.hasStreets = false;
+    var transitModel = otpModel.transitModel();
+    var transferRequests = List.of(new RouteRequest());
+
+    new DirectTransferGenerator(
+      graph,
+      transitModel,
+      noopIssueStore(),
+      MAX_TRANSFER_DURATION,
+      transferRequests
+    )
+      .buildGraph();
+
+    assertTransfers(
+      transitModel.getAllPathTransfers(),
+      tr(S0, 2780, S12),
+      tr(S0, 935, S21),
+      tr(S11, 2224, S12),
+      tr(S11, 751, S21),
+      tr(S12, 751, S22),
+      tr(S13, 2224, S12),
+      tr(S13, 2347, S22),
+      tr(S21, 2347, S12),
+      tr(S22, 751, S12),
+      tr(S23, 2347, S12),
+      tr(S23, 2224, S22)
     );
   }
 
   @Test
   public void testSingleRequestWithoutPatterns() {
-    var generator = new DirectTransferGenerator(
-      MAX_TRANSFER_DURATION,
-      List.of(new RoutingRequest(RequestModes.of().withTransferMode(StreetMode.WALK).build()))
-    );
+    var req = new RouteRequest();
+    req.journey().transfer().setMode(StreetMode.WALK);
+    var transferRequests = List.of(req);
 
-    var otpModel = graph(false);
+    var otpModel = model(false);
     var graph = otpModel.graph();
     graph.hasStreets = true;
     var transitModel = otpModel.transitModel();
 
-    generator.buildGraph(graph, transitModel, null);
+    new DirectTransferGenerator(
+      graph,
+      transitModel,
+      noopIssueStore(),
+      MAX_TRANSFER_DURATION,
+      transferRequests
+    )
+      .buildGraph();
 
     assertTransfers(transitModel.getAllPathTransfers());
   }
 
   @Test
   public void testSingleRequestWithPatterns() {
-    var generator = new DirectTransferGenerator(
-      MAX_TRANSFER_DURATION,
-      List.of(new RoutingRequest(RequestModes.of().withTransferMode(StreetMode.WALK).build()))
-    );
+    var req = new RouteRequest();
+    req.journey().transfer().setMode(StreetMode.WALK);
+    var transferRequests = List.of(req);
 
-    var otpModel = graph(true);
+    var otpModel = model(true);
     var graph = otpModel.graph();
     graph.hasStreets = true;
     var transitModel = otpModel.transitModel();
 
-    generator.buildGraph(graph, transitModel, null);
+    new DirectTransferGenerator(
+      graph,
+      transitModel,
+      noopIssueStore(),
+      MAX_TRANSFER_DURATION,
+      transferRequests
+    )
+      .buildGraph();
 
     assertTransfers(
       transitModel.getAllPathTransfers(),
@@ -126,40 +192,55 @@ class DirectTransferGeneratorTest extends GraphRoutingTest {
 
   @Test
   public void testMultipleRequestsWithoutPatterns() {
-    var generator = new DirectTransferGenerator(
-      MAX_TRANSFER_DURATION,
-      List.of(
-        new RoutingRequest(RequestModes.of().withTransferMode(StreetMode.WALK).build()),
-        new RoutingRequest(RequestModes.of().withTransferMode(StreetMode.BIKE).build())
-      )
-    );
+    var reqWalk = new RouteRequest();
+    reqWalk.journey().transfer().setMode(StreetMode.WALK);
 
-    var otpModel = graph(false);
+    var reqBike = new RouteRequest();
+    reqWalk.journey().transfer().setMode(StreetMode.BIKE);
+
+    var transferRequests = List.of(reqWalk, reqBike);
+
+    var otpModel = model(false);
     var graph = otpModel.graph();
     graph.hasStreets = true;
     var transitModel = otpModel.transitModel();
 
-    generator.buildGraph(graph, transitModel, null);
+    new DirectTransferGenerator(
+      graph,
+      transitModel,
+      noopIssueStore(),
+      MAX_TRANSFER_DURATION,
+      transferRequests
+    )
+      .buildGraph();
 
     assertTransfers(transitModel.getAllPathTransfers());
   }
 
   @Test
   public void testMultipleRequestsWithPatterns() {
-    var generator = new DirectTransferGenerator(
-      MAX_TRANSFER_DURATION,
-      List.of(
-        new RoutingRequest(RequestModes.of().withTransferMode(StreetMode.WALK).build()),
-        new RoutingRequest(RequestModes.of().withTransferMode(StreetMode.BIKE).build())
-      )
-    );
+    var reqWalk = new RouteRequest();
+    reqWalk.journey().transfer().setMode(StreetMode.WALK);
 
-    TestOtpModel model = graph(true);
+    var reqBike = new RouteRequest();
+    reqWalk.journey().transfer().setMode(StreetMode.BIKE);
+
+    var transferRequests = List.of(reqWalk, reqBike);
+
+    TestOtpModel model = model(true);
     var graph = model.graph();
     graph.hasStreets = true;
     var transitModel = model.transitModel();
 
-    generator.buildGraph(graph, transitModel, null);
+    new DirectTransferGenerator(
+      graph,
+      transitModel,
+      noopIssueStore(),
+      MAX_TRANSFER_DURATION,
+      transferRequests
+    )
+      .buildGraph();
+
     assertTransfers(
       transitModel.getAllPathTransfers(),
       tr(S0, 100, List.of(V0, V11), S11),
@@ -169,28 +250,38 @@ class DirectTransferGeneratorTest extends GraphRoutingTest {
     );
   }
 
-  private TestOtpModel graph(boolean addPatterns) {
-    return graphOf(
+  private TestOtpModel model(boolean addPatterns) {
+    return model(addPatterns, false);
+  }
+
+  private TestOtpModel model(boolean addPatterns, boolean withBoardingConstraint) {
+    return modelOf(
       new Builder() {
         @Override
         public void build() {
           S0 = stop("S0", 47.495, 19.001);
           S11 = stop("S11", 47.500, 19.001);
           S12 = stop("S12", 47.520, 19.001);
+          S13 = stop("S13", 47.540, 19.001);
           S21 = stop("S21", 47.500, 19.011);
           S22 = stop("S22", 47.520, 19.011);
+          S23 = stop("S23", 47.540, 19.011);
 
           V0 = intersection("V0", 47.495, 19.000);
           V11 = intersection("V11", 47.500, 19.000);
           V12 = intersection("V12", 47.510, 19.000);
+          V13 = intersection("V13", 47.520, 19.000);
           V21 = intersection("V21", 47.500, 19.010);
           V22 = intersection("V22", 47.510, 19.010);
+          V23 = intersection("V23", 47.520, 19.010);
 
           biLink(V0, S0);
           biLink(V11, S11);
           biLink(V12, S12);
+          biLink(V13, S13);
           biLink(V21, S21);
           biLink(V22, S22);
+          biLink(V23, S23);
 
           street(V0, V11, 100, StreetTraversalPermission.ALL);
           street(V0, V12, 200, StreetTraversalPermission.ALL);
@@ -198,7 +289,9 @@ class DirectTransferGeneratorTest extends GraphRoutingTest {
           street(V0, V22, 200, StreetTraversalPermission.ALL);
 
           street(V11, V12, 100, StreetTraversalPermission.PEDESTRIAN);
+          street(V12, V13, 100, StreetTraversalPermission.PEDESTRIAN);
           street(V21, V22, 100, StreetTraversalPermission.PEDESTRIAN);
+          street(V22, V23, 100, StreetTraversalPermission.PEDESTRIAN);
           street(V11, V21, 100, StreetTraversalPermission.PEDESTRIAN);
           street(V11, V22, 110, StreetTraversalPermission.PEDESTRIAN_AND_BICYCLE);
 
@@ -206,19 +299,21 @@ class DirectTransferGeneratorTest extends GraphRoutingTest {
             var agency = TransitModelForTest.agency("Agency");
 
             tripPattern(
-              new TripPattern(
-                TransitModelForTest.id("TP1"),
-                route("R1", TransitMode.BUS, agency),
-                new StopPattern(List.of(st(S11), st(S12)))
-              )
+              TripPattern
+                .of(TransitModelForTest.id("TP1"))
+                .withRoute(route("R1", TransitMode.BUS, agency))
+                .withStopPattern(
+                  new StopPattern(List.of(st(S11, !withBoardingConstraint, true), st(S12), st(S13)))
+                )
+                .build()
             );
 
             tripPattern(
-              new TripPattern(
-                TransitModelForTest.id("TP2"),
-                route("R2", TransitMode.BUS, agency),
-                new StopPattern(List.of(st(S21), st(S22)))
-              )
+              TripPattern
+                .of(TransitModelForTest.id("TP2"))
+                .withRoute(route("R2", TransitMode.BUS, agency))
+                .withStopPattern(new StopPattern(List.of(st(S21), st(S22), st(S23))))
+                .build()
             );
           }
         }
@@ -314,7 +409,7 @@ class DirectTransferGeneratorTest extends GraphRoutingTest {
           .stream()
           .map(Edge::getToVertex)
           .filter(StreetVertex.class::isInstance)
-          .collect(Collectors.toList());
+          .toList();
 
         return (
           distanceMeters == transfer.getDistanceMeters() &&
