@@ -4,9 +4,10 @@ import java.io.File;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.Arrays;
-import java.util.HashMap;
 import java.util.List;
+import java.util.Set;
 import org.opentripplanner.TestOtpModel;
+import org.opentripplanner.graph_builder.DataImportIssueStore;
 import org.opentripplanner.graph_builder.linking.LinkingDirection;
 import org.opentripplanner.graph_builder.linking.VertexLinker;
 import org.opentripplanner.graph_builder.model.GtfsBundle;
@@ -18,11 +19,11 @@ import org.opentripplanner.routing.core.TraverseMode;
 import org.opentripplanner.routing.core.TraverseModeSet;
 import org.opentripplanner.routing.edgetype.StreetTransitStopLink;
 import org.opentripplanner.routing.graph.Graph;
-import org.opentripplanner.routing.trippattern.Deduplicator;
 import org.opentripplanner.routing.vertextype.TransitStopVertex;
 import org.opentripplanner.routing.vertextype.TransitStopVertexBuilder;
 import org.opentripplanner.transit.model._data.TransitModelForTest;
-import org.opentripplanner.transit.model.site.Stop;
+import org.opentripplanner.transit.model.framework.Deduplicator;
+import org.opentripplanner.transit.model.site.RegularStop;
 import org.opentripplanner.transit.service.StopModel;
 import org.opentripplanner.transit.service.TransitModel;
 
@@ -36,16 +37,22 @@ public class FakeGraph {
   public static TestOtpModel buildGraphNoTransit() throws URISyntaxException {
     var deduplicator = new Deduplicator();
     var stopModel = new StopModel();
-    var gg = new Graph(stopModel, deduplicator);
+    var gg = new Graph(deduplicator);
     var transitModel = new TransitModel(stopModel, deduplicator);
 
     File file = getFileForResource("columbus.osm.pbf");
     OpenStreetMapProvider provider = new OpenStreetMapProvider(file, false);
 
-    OpenStreetMapModule osmModule = new OpenStreetMapModule(provider);
+    OpenStreetMapModule osmModule = new OpenStreetMapModule(
+      List.of(provider),
+      Set.of(),
+      gg,
+      transitModel.getTimeZone(),
+      DataImportIssueStore.noopIssueStore()
+    );
     osmModule.setDefaultWayPropertySetSource(new DefaultWayPropertySetSource());
 
-    osmModule.buildGraph(gg, transitModel, new HashMap<>());
+    osmModule.buildGraph();
     return new TestOtpModel(gg, transitModel);
   }
 
@@ -61,9 +68,11 @@ public class FakeGraph {
     throws URISyntaxException {
     GtfsModule gtfs = new GtfsModule(
       Arrays.asList(new GtfsBundle(getFileForResource("addTransitMultipleLines.gtfs.zip"))),
+      transitModel,
+      g,
       ServiceDateInterval.unbounded()
     );
-    gtfs.buildGraph(g, transitModel, new HashMap<>());
+    gtfs.buildGraph();
   }
 
   /**
@@ -71,11 +80,8 @@ public class FakeGraph {
    */
   public static void addPerpendicularRoutes(Graph graph, TransitModel transitModel)
     throws URISyntaxException {
-    GtfsModule gtfs = new GtfsModule(
-      Arrays.asList(new GtfsBundle(getFileForResource("addPerpendicularRoutes.gtfs.zip"))),
-      ServiceDateInterval.unbounded()
-    );
-    gtfs.buildGraph(graph, transitModel, new HashMap<>());
+    var input = List.of(new GtfsBundle(getFileForResource("addPerpendicularRoutes.gtfs.zip")));
+    new GtfsModule(input, transitModel, graph, ServiceDateInterval.unbounded()).buildGraph();
   }
 
   /** Add a regular grid of stops to the graph */
@@ -84,12 +90,8 @@ public class FakeGraph {
     for (double lat = 39.9058; lat < 40.0281; lat += 0.005) {
       for (double lon = -83.1341; lon < -82.8646; lon += 0.005) {
         String id = Integer.toString(count++);
-        Stop stop = TransitModelForTest.stop(id).withCoordinate(lat, lon).build();
-        new TransitStopVertexBuilder()
-          .withGraph(g)
-          .withStop(stop)
-          .withTransitModel(transitModel)
-          .build();
+        RegularStop stop = TransitModelForTest.stop(id).withCoordinate(lat, lon).build();
+        new TransitStopVertexBuilder().withGraph(g).withStop(stop).build();
       }
     }
   }
@@ -100,43 +102,31 @@ public class FakeGraph {
     double lon = -83;
     for (double lat = 40; lat < 40.01; lat += 0.005) {
       String id = "EXTRA_" + count++;
-      Stop stop = TransitModelForTest.stop(id).withCoordinate(lat, lon).build();
-      new TransitStopVertexBuilder()
-        .withGraph(g)
-        .withStop(stop)
-        .withTransitModel(transitModel)
-        .build();
+      RegularStop stop = TransitModelForTest.stop(id).withCoordinate(lat, lon).build();
+      new TransitStopVertexBuilder().withGraph(g).withStop(stop).build();
     }
 
     // add some duplicate stops, identical to the regular stop grid
     lon = -83.1341 + 0.1;
     for (double lat = 39.9058; lat < 40.0281; lat += 0.005) {
       String id = "DUPE_" + count++;
-      Stop stop = TransitModelForTest.stop(id).withCoordinate(lat, lon).build();
-      new TransitStopVertexBuilder()
-        .withGraph(g)
-        .withStop(stop)
-        .withTransitModel(transitModel)
-        .build();
+      RegularStop stop = TransitModelForTest.stop(id).withCoordinate(lat, lon).build();
+      new TransitStopVertexBuilder().withGraph(g).withStop(stop).build();
     }
 
     // add some almost duplicate stops
     lon = -83.1341 + 0.15;
     for (double lat = 39.9059; lat < 40.0281; lat += 0.005) {
       String id = "ALMOST_" + count++;
-      Stop stop = TransitModelForTest.stop(id).withCoordinate(lat, lon).build();
-      new TransitStopVertexBuilder()
-        .withGraph(g)
-        .withStop(stop)
-        .withTransitModel(transitModel)
-        .build();
+      RegularStop stop = TransitModelForTest.stop(id).withCoordinate(lat, lon).build();
+      new TransitStopVertexBuilder().withGraph(g).withStop(stop).build();
     }
   }
 
   /** link the stops in the graph */
   public static void link(Graph graph, TransitModel transitModel) {
     transitModel.index();
-    graph.index();
+    graph.index(transitModel.getStopModel());
 
     VertexLinker linker = graph.getLinker();
 
